[TASK] add t3kit extension key in composer.json

--- a/composer.json
+++ b/composer.json
@@ -83,7 +83,8 @@
   "extra": {
     "typo3/cms": {
         "web-dir": "build/public",
-        "app-dir": "build"
+        "app-dir": "build",
+        "extension-key": "t3kit"
     }
   }
 }
