--- a/composer.json
+++ b/composer.json
@@ -42,9 +42,9 @@
   },
   "require-dev": {
     "editorconfig-checker/editorconfig-checker": "^10.2.1",
+    "squizlabs/php_codesniffer": "^3.5.8",
     "helmich/typo3-typoscript-lint": "^2.4.1",
-    "sclable/xml-lint": "^0.3.0",
-    "squizlabs/php_codesniffer": "^3.5.8"
+    "sclable/xml-lint": "^0.4.0"
   },
   "suggest": {
     "typo3/cms-indexed-search": "TYPO3 indexed search",
