--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "swiper": "6.5.0"
   },
   "devDependencies": {
-    "stylelint-no-unsupported-browser-features": "~4.1.4",
+    "@babel/preset-env": "~7.13.10",
+    "@rollup/plugin-babel": "~5.3.0",
     "@rollup/plugin-node-resolve": "~11.2.0",
     "@rollup/plugin-replace": "~2.4.1",
     "boxen": "~5.0.0",
@@ -52,7 +53,7 @@
     "p-each-series": "~2.2.0",
     "postcss": "~8.2.7",
     "postcss-import": "~14.0.0",
-    "rfg-api": "^0.5.1",
+    "rfg-api": "~0.5.1",
     "rollup": "~2.40.0",
     "rollup-plugin-sizes": "~1.0.4",
     "rollup-plugin-terser": "~7.0.2",
@@ -61,7 +62,8 @@
     "snazzy": "~9.0.0",
     "standard": "~16.0.3",
     "stylelint": "~13.12.0",
-    "stylelint-config-standard": "~20.0.0"
+    "stylelint-config-standard": "~20.0.0",
+    "stylelint-no-unsupported-browser-features": "~4.1.4"
   },
   "peerDependencies": {},
   "engines": {
