--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-composer-
 
+      - name: Install Composer dependencies
+        run: composer install --prefer-dist --no-progress --no-suggest
+
       - name: Get npm cache directory
         id: npm-cache
         run: |
