--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@babel/preset-env": "~7.13.12",
+    "@node-sass/node-module-importer": "^1.2.3",
     "@rollup/plugin-babel": "~5.3.0",
     "@rollup/plugin-node-resolve": "~11.2.1",
     "@rollup/plugin-replace": "~2.4.2",
@@ -42,6 +43,7 @@
     "cssnano": "~4.1.10",
     "cssom": "~0.4.4",
     "del": "~6.0.0",
+    "fibers": "^5.0.0",
     "filesize": "~6.1.0",
     "fs-extra": "~9.1.0",
     "git-rev-sync": "~3.0.1",
