--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
   },
   "peerDependencies": {},
   "engines": {
-    "node": ">=14.15.1"
+    "node": ">=14.15.1",
+    "npm": ">=7.7.6"
   },
   "browserslist": [
     "> 1.5% and last 2 versions",
