--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "bootstrap": "v5.0.0-beta3",
     "bootstrap-icons": "1.4.1",
     "file-icon-vectors": "1.0.0",
-    "simplelightbox": "2.7.0",
-    "swiper": "6.5.2"
+    "simplelightbox": "https://github.com/dmh/simplelightbox.git#nodeps",
+    "swiper": "6.5.4"
   },
   "devDependencies": {
     "@babel/preset-env": "~7.13.12",
@@ -35,12 +35,12 @@
     "@rollup/plugin-babel": "~5.3.0",
     "@rollup/plugin-node-resolve": "~11.2.1",
     "@rollup/plugin-replace": "~2.4.2",
-    "boxen": "~5.0.0",
+    "boxen": "~5.0.1",
     "browserslist": "~4.16.3",
     "chalk": "~4.1.0",
     "chokidar": "~3.5.1",
     "cpy": "~8.1.2",
-    "cssnano": "~4.1.10",
+    "cssnano": "~4.1.11",
     "cssom": "~0.4.4",
     "del": "~6.0.0",
     "fibers": "^5.0.0",
@@ -71,7 +71,7 @@
   "peerDependencies": {},
   "engines": {
     "node": ">=14.15.1",
-    "npm": ">=7.7.6"
+    "npm": ">=7.8.0"
   },
   "browserslist": [
     "> 1.6% and last 2 versions",
