[TEST] add composer test as a separate step in github actions and git hook

--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "lint-js": "standard -v 'theme/src/js/**/*.js' | snazzy",
     "lint-config": "standard -v 'theme/config/**/*.js' | snazzy",
     "lint-all": "npm-run-all --parallel lint-css lint-scss lint-js lint-config",
-    "composer-test": "composer test",
-    "test": "npm-run-all --parallel lint-all composer-test",
+    "lint": "",
+    "test": "npm-run-all --parallel lint-all",
     "favicons": "node theme/config/favicons.js",
     "filetypeIcons": "node theme/config/file-type-icons.js",
     "icons": "node theme/config/icons.js",
     "dev": "node theme/config/build.js",
+    "build-dev": "",
     "prod": "NODE_ENV=production node theme/config/build.js",
+    "build-prod": "",
     "build": "npm-run-all dev prod",
     "start": "node theme/config/start.js"
   },
