--- a/.github/workflows/code-guidelines.yml
+++ b/.github/workflows/code-guidelines.yml
@@ -46,6 +46,9 @@ jobs:
       - name: Install Composer dependencies
         run: composer install --prefer-dist --no-progress --no-suggest
 
+      - name: Run composer test
+        run: composer test
+
       - name: Get npm cache directory
         id: npm-cache
         run: |
