--- a/composer.json
+++ b/composer.json
@@ -41,10 +41,10 @@
     "typo3/cms-felogin": "^10.4.6"
   },
   "require-dev": {
-    "editorconfig-checker/editorconfig-checker": "^10.2.1",
-    "squizlabs/php_codesniffer": "^3.5.8",
-    "helmich/typo3-typoscript-lint": "^2.4.1",
-    "sclable/xml-lint": "^0.4.0"
+    "editorconfig-checker/editorconfig-checker": "~10.2.3",
+    "squizlabs/php_codesniffer": "~3.6.0",
+    "helmich/typo3-typoscript-lint": "~2.5.0",
+    "sclable/xml-lint": "~0.4.0"
   },
   "suggest": {
     "typo3/cms-indexed-search": "TYPO3 indexed search",
