[TEST] update GA test, add all npm scripts to test

--- a/.github/workflows/code-guidelines.yml
+++ b/.github/workflows/code-guidelines.yml
@@ -73,6 +73,15 @@ jobs:
       - name: Run npm build
         run: npm run build
 
+      - name: Run npm icons
+        run: npm run icons
+
+      - name: Run npm filetypeIcons
+        run: npm run filetypeIcons
+
+      - name: Run npm favicons
+        run: npm run favicons
+
       - name: PKG versions
         run: |
           node -v
