--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "authors": "t3kit Community",
   "repository": "t3kit/t3kit",
   "scripts": {
-    "prepare": "is-ci || husky install",
+    "prepare": "husky install",
     "lint-css": "stylelint 'theme/src/css/**/*.css'",
     "lint-scss": "stylelint 'theme/src/scss/**/*.scss'",
     "lint-js": "standard -v 'theme/src/js/**/*.js' | snazzy",
@@ -52,7 +52,6 @@
     "globby": "~11.0.3",
     "hasha": "~5.2.2",
     "husky": "~6.0.0",
-    "is-ci": "^3.0.0",
     "moment": "~2.29.1",
     "npm-run-all": "~4.1.5",
     "p-each-series": "~2.2.0",
