--- a/.github/workflows/code-guidelines.yml
+++ b/.github/workflows/code-guidelines.yml
@@ -65,7 +65,7 @@ jobs:
         run: npm install -g npm@latest
 
       - name: Install npm dependencies
-        run: npm ci
+        run: npm ci --ignore-scripts
 
       - name: Run npm test
         run: npm test
