--- a/.github/workflows/code-guidelines.yml
+++ b/.github/workflows/code-guidelines.yml
@@ -61,8 +61,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
-      - name: Install npm@latest
-        run: npm install -g npm@latest
+      - name: Install npm@^7.9
+        run: npm install -g npm@^7.9
 
       - name: Install npm dependencies
         run: npm ci --ignore-scripts
