--- a/package.json
+++ b/package.json
@@ -25,49 +25,49 @@
     "start": "node theme/config/start.js"
   },
   "dependencies": {
-    "bootstrap": "v5.0.0-beta3",
-    "bootstrap-icons": "1.4.1",
+    "bootstrap": "v5.0.1",
+    "bootstrap-icons": "1.5.0",
     "file-icon-vectors": "1.0.0",
     "simplelightbox": "git@github.com:dmh/simplelightbox.git#nodeps",
-    "swiper": "6.5.6"
+    "swiper": "6.6.2"
   },
   "devDependencies": {
-    "@babel/preset-env": "~7.13.15",
+    "@babel/preset-env": "~7.14.2",
     "@node-sass/node-module-importer": "^1.2.3",
     "@rollup/plugin-babel": "~5.3.0",
-    "@rollup/plugin-node-resolve": "~11.2.1",
+    "@rollup/plugin-node-resolve": "~13.0.0",
     "@rollup/plugin-replace": "~2.4.2",
     "boxen": "~5.0.1",
-    "browserslist": "~4.16.4",
-    "chalk": "~4.1.0",
+    "browserslist": "~4.16.6",
+    "chalk": "~4.1.1",
     "chokidar": "~3.5.1",
     "cpy": "~8.1.2",
-    "cssnano": "~5.0.1",
+    "cssnano": "~5.0.4",
     "cssom": "~0.4.4",
     "del": "~6.0.0",
     "fibers": "^5.0.0",
-    "filesize": "~6.2.2",
-    "fs-extra": "~9.1.0",
+    "filesize": "~6.3.0",
+    "fs-extra": "~10.0.0",
     "git-rev-sync": "~3.0.1",
     "globby": "~11.0.3",
     "hasha": "~5.2.2",
     "husky": "~6.0.0",
     "moment": "~2.29.1",
     "npm-run-all": "~4.1.5",
-    "p-each-series": "~2.2.0",
-    "postcss": "~8.2.10",
-    "postcss-import": "~14.0.0",
+    "p-each-series": "2.2.0",
+    "postcss": "~8.3.0",
+    "postcss-import": "~14.0.2",
     "rfg-api": "~0.5.2",
-    "rollup": "~2.45.2",
+    "rollup": "~2.49.0",
     "rollup-plugin-sizes": "~1.0.4",
     "rollup-plugin-terser": "~7.0.2",
-    "sass": "~1.32.8",
+    "sass": "1.32.13",
     "semver": "~7.3.5",
     "snazzy": "~9.0.0",
     "standard": "~16.0.3",
-    "stylelint": "~13.12.0",
-    "stylelint-config-standard": "~21.0.0",
-    "stylelint-no-unsupported-browser-features": "~4.1.4"
+    "stylelint": "~13.13.1",
+    "stylelint-config-standard": "~22.0.0",
+    "stylelint-no-unsupported-browser-features": "~5.0.1"
   },
   "peerDependencies": {},
   "engines": {
