--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "start": "node theme/config/start.js"
   },
   "dependencies": {
+    "awesomplete": "1.1.5",
     "bootstrap": "v5.0.1",
     "bootstrap-icons": "1.5.0",
     "file-icon-vectors": "1.0.0",
@@ -69,7 +70,6 @@
     "stylelint-config-standard": "~22.0.0",
     "stylelint-no-unsupported-browser-features": "~5.0.1"
   },
-  "peerDependencies": {},
   "engines": {
     "node": ">=14.15.1",
     "npm": ">=7.9.0"
