--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "start": "node theme/config/start.js"
   },
   "dependencies": {
-    "awesomplete": "1.1.5",
-    "bootstrap": "v5.0.1",
-    "bootstrap-icons": "1.5.0",
-    "file-icon-vectors": "1.0.0",
+    "awesomplete": "~1.1.5",
+    "bootstrap": "~v5.0.1",
+    "bootstrap-icons": "~1.5.0",
+    "file-icon-vectors": "~1.0.0",
     "simplelightbox": "git@github.com:dmh/simplelightbox.git#nodeps",
-    "swiper": "6.7.0"
+    "swiper": "~6.7.0"
   },
   "devDependencies": {
     "@babel/preset-env": "~7.14.2",
