--- a/composer.json
+++ b/composer.json
@@ -24,21 +24,21 @@
     "docs": "https://github.com/t3kit/t3kit"
   },
   "require": {
-    "typo3/cms-backend": "^10.4.6",
-    "typo3/cms-core": "^10.4.6",
-    "typo3/cms-extbase": "^10.4.6",
-    "typo3/cms-extensionmanager": "^10.4.6",
-    "typo3/cms-filelist": "^10.4.6",
-    "typo3/cms-filemetadata": "^10.4.6",
-    "typo3/cms-fluid": "^10.4.6",
-    "typo3/cms-frontend": "^10.4.6",
-    "typo3/cms-install": "^10.4.6",
-    "typo3/cms-recordlist": "^10.4.6",
-    "typo3/cms-form": "^10.4.6",
-    "typo3/cms-rte-ckeditor": "^10.4.6",
-    "typo3/cms-seo": "^10.4.6",
-    "typo3/cms-tstemplate": "^10.4.6",
-    "typo3/cms-felogin": "^10.4.6",
+    "typo3/cms-backend": "dev-master",
+    "typo3/cms-core": "dev-master",
+    "typo3/cms-extbase": "dev-master",
+    "typo3/cms-extensionmanager": "dev-master",
+    "typo3/cms-filelist": "dev-master",
+    "typo3/cms-filemetadata": "dev-master",
+    "typo3/cms-fluid": "dev-master",
+    "typo3/cms-frontend": "dev-master",
+    "typo3/cms-install": "dev-master",
+    "typo3/cms-recordlist": "dev-master",
+    "typo3/cms-form": "dev-master",
+    "typo3/cms-rte-ckeditor": "dev-master",
+    "typo3/cms-seo": "dev-master",
+    "typo3/cms-tstemplate": "dev-master",
+    "typo3/cms-felogin": "dev-master",
     "b13/container": "^1.3"
   },
   "require-dev": {
