--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "authors": "t3kit Community",
   "repository": "t3kit/t3kit",
   "scripts": {
-    "prepare": "husky install",
+    "postinstall": "husky install",
     "lint-css": "stylelint 'theme/src/css/**/*.css'",
     "lint-scss": "stylelint 'theme/src/scss/**/*.scss'",
     "lint-js": "standard -v 'theme/src/js/**/*.js' | snazzy",
@@ -26,40 +26,40 @@
   },
   "dependencies": {
     "awesomplete": "~1.1.5",
-    "bootstrap": "~v5.0.1",
+    "bootstrap": "~v5.1.1",
     "bootstrap-icons": "~1.5.0",
     "file-icon-vectors": "~1.0.0",
     "simplelightbox": "git@github.com:dmh/simplelightbox.git#nodeps",
-    "swiper": "~6.7.0"
+    "swiper": "~7.0.6"
   },
   "devDependencies": {
-    "@babel/preset-env": "~7.14.2",
+    "@babel/preset-env": "~7.15.6",
     "@node-sass/node-module-importer": "^1.2.3",
     "@rollup/plugin-babel": "~5.3.0",
-    "@rollup/plugin-node-resolve": "~13.0.0",
-    "@rollup/plugin-replace": "~2.4.2",
-    "boxen": "~5.0.1",
-    "browserslist": "~4.16.6",
-    "chalk": "~4.1.1",
+    "@rollup/plugin-node-resolve": "~13.0.5",
+    "@rollup/plugin-replace": "~3.0.0",
+    "boxen": "~5.1.2",
+    "browserslist": "~4.17.1",
+    "chalk": "~4.1.2",
     "chokidar": "~3.5.1",
     "cpy": "~8.1.2",
-    "cssnano": "~5.0.4",
+    "cssnano": "~5.0.8",
     "cssom": "~0.5.0",
     "del": "~6.0.0",
     "fibers": "^5.0.0",
-    "filesize": "~6.4.0",
+    "filesize": "~8.0.3",
     "fs-extra": "~10.0.0",
     "git-rev-sync": "~3.0.1",
-    "globby": "~11.0.3",
+    "globby": "11.0.4",
     "hasha": "~5.2.2",
-    "husky": "~7.0.0",
+    "husky": "~7.0.2",
     "moment": "~2.29.1",
     "npm-run-all": "~4.1.5",
     "p-each-series": "2.2.0",
-    "postcss": "~8.3.0",
+    "postcss": "~8.3.7",
     "postcss-import": "~14.0.2",
     "rfg-api": "~0.5.2",
-    "rollup": "~2.52.2",
+    "rollup": "~2.57.0",
     "rollup-plugin-sizes": "~1.0.4",
     "rollup-plugin-terser": "~7.0.2",
     "sass": "1.32.13",
@@ -68,7 +68,7 @@
     "standard": "~16.0.3",
     "stylelint": "~13.13.1",
     "stylelint-config-standard": "~22.0.0",
-    "stylelint-no-unsupported-browser-features": "~5.0.1"
+    "stylelint-no-unsupported-browser-features": "~5.0.2"
   },
   "engines": {
     "node": ">=14.15.1",
