--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "bootstrap": "~v5.1.1",
     "bootstrap-icons": "~1.5.0",
     "file-icon-vectors": "~1.0.0",
-    "simplelightbox": "git@github.com:dmh/simplelightbox.git#nodeps",
+    "simplelightbox": "~2.8.1",
     "swiper": "~7.0.6"
   },
   "devDependencies": {
@@ -37,7 +37,7 @@
     "@node-sass/node-module-importer": "^1.2.3",
     "@rollup/plugin-babel": "~5.3.0",
     "@rollup/plugin-node-resolve": "~13.0.5",
-    "@rollup/plugin-replace": "~3.0.0",
+    "@rollup/plugin-replace": "2.4.2",
     "boxen": "~5.1.2",
     "browserslist": "~4.17.1",
     "chalk": "~4.1.2",
