--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
     "typo3/cms-seo": "dev-master",
     "typo3/cms-tstemplate": "dev-master",
     "typo3/cms-felogin": "dev-master",
-    "b13/container": "^1.3"
+    "b13/container": "dev-master"
   },
   "require-dev": {
     "editorconfig-checker/editorconfig-checker": "~10.2.3",
