--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,7 @@
       "T3k\\t3kit\\": "Classes"
     }
   },
-  "prefer-stable": true,
+  "prefer-stable": false,
   "config": {
     "vendor-dir": "build/vendor",
     "optimize-autoloader": true,
