Revert "[TASK] Disable prefer-stable"
This reverts commit bb9a58c5c391823f6189b039717e16eccf4b6153.

--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,7 @@
       "T3k\\t3kit\\": "Classes"
     }
   },
-  "prefer-stable": false,
+  "prefer-stable": true,
   "config": {
     "vendor-dir": "build/vendor",
     "optimize-autoloader": true,
