--- a/composer.json
+++ b/composer.json
@@ -24,27 +24,27 @@
     "docs": "https://github.com/t3kit/t3kit"
   },
   "require": {
-    "typo3/cms-backend": "^10.4.6",
-    "typo3/cms-core": "^10.4.6",
-    "typo3/cms-extbase": "^10.4.6",
-    "typo3/cms-extensionmanager": "^10.4.6",
-    "typo3/cms-filelist": "^10.4.6",
-    "typo3/cms-filemetadata": "^10.4.6",
-    "typo3/cms-fluid": "^10.4.6",
-    "typo3/cms-frontend": "^10.4.6",
-    "typo3/cms-install": "^10.4.6",
-    "typo3/cms-recordlist": "^10.4.6",
-    "typo3/cms-form": "^10.4.6",
-    "typo3/cms-rte-ckeditor": "^10.4.6",
-    "typo3/cms-seo": "^10.4.6",
-    "typo3/cms-tstemplate": "^10.4.6",
-    "typo3/cms-felogin": "^10.4.6",
-    "b13/container": "^1.3"
+    "typo3/cms-backend": "dev-master",
+    "typo3/cms-core": "dev-master",
+    "typo3/cms-extbase": "dev-master",
+    "typo3/cms-extensionmanager": "dev-master",
+    "typo3/cms-filelist": "dev-master",
+    "typo3/cms-filemetadata": "dev-master",
+    "typo3/cms-fluid": "dev-master",
+    "typo3/cms-frontend": "dev-master",
+    "typo3/cms-install": "dev-master",
+    "typo3/cms-recordlist": "dev-master",
+    "typo3/cms-form": "dev-master",
+    "typo3/cms-rte-ckeditor": "dev-master",
+    "typo3/cms-seo": "dev-master",
+    "typo3/cms-tstemplate": "dev-master",
+    "typo3/cms-felogin": "dev-master",
+    "b13/container": "dev-master"
   },
   "require-dev": {
     "editorconfig-checker/editorconfig-checker": "~10.2.3",
     "squizlabs/php_codesniffer": "~3.6.0",
-    "helmich/typo3-typoscript-lint": "~2.5.0",
+    "helmich/typo3-typoscript-lint": "~2.5.2",
     "sclable/xml-lint": "~0.4.0"
   },
   "suggest": {
@@ -76,7 +76,11 @@
       "@lint-editorconfig",
       "@lint-typoscript",
       "@lint-xml"
-    ]
+    ],
+    "ci": "./.localconf/composer/sshauth.sh composer i",
+    "cup": "./.localconf/composer/sshauth.sh composer up",
+    "cre": "./.localconf/composer/sshauth.sh composer require",
+    "ctest": "./.localconf/composer/sshauth.sh composer test"
   },
   "extra": {
     "typo3/cms": {
