[TASK] use TYPO3 v11.5.0 LTS

--- a/composer.json
+++ b/composer.json
@@ -24,21 +24,21 @@
     "docs": "https://github.com/t3kit/t3kit"
   },
   "require": {
-    "typo3/cms-backend": "dev-master",
-    "typo3/cms-core": "dev-master",
-    "typo3/cms-extbase": "dev-master",
-    "typo3/cms-extensionmanager": "dev-master",
-    "typo3/cms-filelist": "dev-master",
-    "typo3/cms-filemetadata": "dev-master",
-    "typo3/cms-fluid": "dev-master",
-    "typo3/cms-frontend": "dev-master",
-    "typo3/cms-install": "dev-master",
-    "typo3/cms-recordlist": "dev-master",
-    "typo3/cms-form": "dev-master",
-    "typo3/cms-rte-ckeditor": "dev-master",
-    "typo3/cms-seo": "dev-master",
-    "typo3/cms-tstemplate": "dev-master",
-    "typo3/cms-felogin": "dev-master",
+    "typo3/cms-backend": "^11.5.0",
+    "typo3/cms-core": "^11.5.0",
+    "typo3/cms-extbase": "^11.5.0",
+    "typo3/cms-extensionmanager": "^11.5.0",
+    "typo3/cms-filelist": "^11.5.0",
+    "typo3/cms-filemetadata": "^11.5.0",
+    "typo3/cms-fluid": "^11.5.0",
+    "typo3/cms-frontend": "^11.5.0",
+    "typo3/cms-install": "^11.5.0",
+    "typo3/cms-recordlist": "^11.5.0",
+    "typo3/cms-form": "^11.5.0",
+    "typo3/cms-rte-ckeditor": "^11.5.0",
+    "typo3/cms-seo": "^11.5.0",
+    "typo3/cms-tstemplate": "^11.5.0",
+    "typo3/cms-felogin": "^11.5.0",
     "b13/container": "dev-master"
   },
   "require-dev": {
