--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "GPL-2.0",
   "authors": "t3kit Community",
   "repository": "t3kit/t3kit",
+  "type": "module",
   "scripts": {
     "postinstall": "node -e \"if(require('fs').existsSync('.git')){process.exit(1)}\" || husky install",
     "lint-css": "stylelint 'theme/src/css/**/*.css'",
@@ -27,18 +28,17 @@
   "dependencies": {
     "awesomplete": "~1.1.5",
     "bootstrap": "~v5.1.1",
-    "bootstrap-icons": "~1.5.0",
+    "bootstrap-icons": "~1.6.1",
     "file-icon-vectors": "~1.0.0",
-    "simplelightbox": "~2.8.1",
-    "swiper": "~7.0.6"
+    "simplelightbox": "~2.9.0",
+    "swiper": "~7.1.0"
   },
   "devDependencies": {
     "@babel/preset-env": "~7.15.6",
-    "@node-sass/node-module-importer": "^1.2.3",
     "@rollup/plugin-babel": "~5.3.0",
     "@rollup/plugin-node-resolve": "~13.0.5",
-    "@rollup/plugin-replace": "2.4.2",
-    "boxen": "~5.1.2",
+    "@rollup/plugin-replace": "~3.0.0",
+    "boxen": "~6.2.1",
     "browserslist": "~4.17.1",
     "chalk": "~4.1.2",
     "chokidar": "~3.5.1",
@@ -46,38 +46,37 @@
     "cssnano": "~5.0.8",
     "cssom": "~0.5.0",
     "del": "~6.0.0",
-    "fibers": "^5.0.0",
+    "fibers": "~5.0.0",
     "filesize": "~8.0.3",
     "fs-extra": "~10.0.0",
-    "git-rev-sync": "~3.0.1",
-    "globby": "11.0.4",
+    "globby": "~12.0.2",
     "hasha": "~5.2.2",
     "husky": "~7.0.2",
     "moment": "~2.29.1",
     "npm-run-all": "~4.1.5",
-    "p-each-series": "2.2.0",
+    "p-each-series": "~3.0.0",
     "postcss": "~8.3.7",
     "postcss-import": "~14.0.2",
     "rfg-api": "~0.5.2",
-    "rollup": "~2.57.0",
+    "rollup": "~2.58.3",
     "rollup-plugin-sizes": "~1.0.4",
     "rollup-plugin-terser": "~7.0.2",
-    "sass": "1.32.13",
+    "sass": "~1.43.3",
+    "sass-module-importer": "^1.4.0",
     "semver": "~7.3.5",
     "snazzy": "~9.0.0",
     "standard": "~16.0.3",
-    "stylelint": "~13.13.1",
-    "stylelint-config-standard": "~22.0.0",
+    "stylelint": "~14.0.0",
+    "stylelint-config-standard": "~23.0.0",
+    "stylelint-config-standard-scss": "^2.0.0",
     "stylelint-no-unsupported-browser-features": "~5.0.2"
   },
   "engines": {
-    "node": ">=14.15.1",
-    "npm": ">=7.9.0"
+    "node": ">=16.12.0",
+    "npm": ">=8.0.0"
   },
   "browserslist": [
-    "> 1.6% and last 2 versions",
-    "IOS >= 13 and > 1.5%",
-    "Safari >= 13 and > 1.5%"
+    "> 1.5% and last 2 versions"
   ],
   "standard": {
     "ignore": [
@@ -87,16 +86,21 @@
     ]
   },
   "stylelint": {
-    "extends": "stylelint-config-standard",
+    "extends": [
+      "stylelint-config-standard",
+      "stylelint-config-standard-scss"
+    ],
     "plugins": [
       "stylelint-no-unsupported-browser-features"
     ],
     "rules": {
+      "selector-class-pattern": null,
       "selector-pseudo-element-colon-notation": "single",
-      "no-descending-specificity": null,
       "comment-empty-line-before": null,
-      "at-rule-no-unknown": null,
-      "plugin/no-unsupported-browser-features": true
+      "max-line-length":180,
+      "plugin/no-unsupported-browser-features": true,
+      "scss/at-import-no-partial-leading-underscore": null,
+      "scss/at-import-partial-extension": null
     },
     "ignoreFiles": [
       "**/vendor/**/*.css",
