[TASK] restructure js file system for ES modules, update rollup config, update dep-s

--- a/package.json
+++ b/package.json
@@ -42,9 +42,8 @@
     "browserslist": "~4.17.1",
     "chalk": "~4.1.2",
     "chokidar": "~3.5.1",
-    "cpy": "~8.1.2",
+    "cpy": "https://github.com/sindresorhus/cpy.git#59f3f5c",
     "cssnano": "~5.0.8",
-    "cssom": "~0.5.0",
     "del": "~6.0.0",
     "fibers": "~5.0.0",
     "filesize": "~8.0.3",
