--- a/package.json
+++ b/package.json
@@ -30,15 +30,16 @@
     "bootstrap": "~v5.1.1",
     "bootstrap-icons": "~1.7.0",
     "file-icon-vectors": "~1.0.0",
-    "simplelightbox": "~2.9.0",
-    "swiper": "~7.2.0"
+    "simplelightbox": "~2.10.1",
+    "swiper": "~7.3.1"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "~13.0.5",
     "@rollup/plugin-replace": "~3.0.0",
     "boxen": "~6.2.1",
-    "browserslist": "~4.17.1",
-    "chalk": "~4.1.2",
+    "browserslist": "~4.18.1",
+    "chalk": "~5.0.0",
+    "chalk-template": "^0.2.0",
     "chokidar": "~3.5.1",
     "cpy": "https://github.com/sindresorhus/cpy.git#59f3f5c",
     "cssnano": "~5.0.8",
@@ -52,20 +53,20 @@
     "moment": "~2.29.1",
     "npm-run-all": "~4.1.5",
     "p-each-series": "~3.0.0",
-    "postcss": "~8.3.7",
+    "postcss": "~8.4.4",
     "postcss-import": "~14.0.2",
     "rfg-api": "~0.5.2",
-    "rollup": "~2.59.0",
+    "rollup": "~2.60.2",
     "rollup-plugin-sizes": "~1.0.4",
     "rollup-plugin-terser": "~7.0.2",
-    "sass": "~1.43.3",
+    "sass": "~1.44.0",
     "sass-module-importer": "^1.4.0",
     "semver": "~7.3.5",
     "snazzy": "~9.0.0",
     "standard": "~16.0.3",
-    "stylelint": "~14.0.0",
-    "stylelint-config-standard": "~23.0.0",
-    "stylelint-config-standard-scss": "^2.0.0",
+    "stylelint": "~14.1.0",
+    "stylelint-config-standard": "~24.0.0",
+    "stylelint-config-standard-scss": "^3.0.0",
     "stylelint-no-unsupported-browser-features": "~5.0.2"
   },
   "exports": {
