--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
     "typo3/cms-seo": "^11.5.0",
     "typo3/cms-tstemplate": "^11.5.0",
     "typo3/cms-felogin": "^11.5.0",
-    "b13/container": "dev-master"
+    "b13/container": "^1.4.2"
   },
   "require-dev": {
     "editorconfig-checker/editorconfig-checker": "~10.2.3",
