--- a/composer.json
+++ b/composer.json
@@ -24,28 +24,28 @@
     "docs": "https://github.com/t3kit/t3kit"
   },
   "require": {
-    "typo3/cms-backend": "^11.5.0",
-    "typo3/cms-core": "^11.5.0",
-    "typo3/cms-extbase": "^11.5.0",
-    "typo3/cms-extensionmanager": "^11.5.0",
-    "typo3/cms-filelist": "^11.5.0",
-    "typo3/cms-filemetadata": "^11.5.0",
-    "typo3/cms-fluid": "^11.5.0",
-    "typo3/cms-frontend": "^11.5.0",
-    "typo3/cms-install": "^11.5.0",
-    "typo3/cms-recordlist": "^11.5.0",
-    "typo3/cms-form": "^11.5.0",
-    "typo3/cms-rte-ckeditor": "^11.5.0",
-    "typo3/cms-seo": "^11.5.0",
-    "typo3/cms-tstemplate": "^11.5.0",
-    "typo3/cms-felogin": "^11.5.0",
-    "b13/container": "^1.4.2"
+    "typo3/cms-backend": "^11.5.8",
+    "typo3/cms-core": "^11.5.8",
+    "typo3/cms-extbase": "^11.5.8",
+    "typo3/cms-extensionmanager": "^11.5.8",
+    "typo3/cms-filelist": "^11.5.8",
+    "typo3/cms-filemetadata": "^11.5.8",
+    "typo3/cms-fluid": "^11.5.8",
+    "typo3/cms-frontend": "^11.5.8",
+    "typo3/cms-install": "^11.5.8",
+    "typo3/cms-recordlist": "^11.5.8",
+    "typo3/cms-form": "^11.5.8",
+    "typo3/cms-rte-ckeditor": "^11.5.8",
+    "typo3/cms-seo": "^11.5.8",
+    "typo3/cms-tstemplate": "^11.5.8",
+    "typo3/cms-felogin": "^11.5.8",
+    "b13/container": "^1.5.0"
   },
   "require-dev": {
-    "editorconfig-checker/editorconfig-checker": "~10.2.3",
-    "squizlabs/php_codesniffer": "~3.6.0",
-    "helmich/typo3-typoscript-lint": "~2.5.2",
-    "sclable/xml-lint": "~0.4.0"
+    "editorconfig-checker/editorconfig-checker": "^10.3",
+    "helmich/typo3-typoscript-lint": "^2.5.2",
+    "sclable/xml-lint": "0.5.0",
+    "squizlabs/php_codesniffer": "^3.6.0"
   },
   "suggest": {
     "typo3/cms-indexed-search": "TYPO3 indexed search",
