--- a/composer.json
+++ b/composer.json
@@ -62,7 +62,11 @@
   "config": {
     "vendor-dir": "build/vendor",
     "optimize-autoloader": true,
-    "sort-packages": true
+    "sort-packages": true,
+    "allow-plugins": {
+      "typo3/class-alias-loader": true,
+      "typo3/cms-composer-installers": true
+    }
   },
   "scripts": {
     "lint-php": "phpcs --colors",
