--- a/package.json
+++ b/package.json
@@ -100,7 +100,8 @@
       "max-line-length": 180,
       "plugin/no-unsupported-browser-features": true,
       "scss/at-import-no-partial-leading-underscore": null,
-      "scss/at-import-partial-extension": null
+      "scss/at-import-partial-extension": null,
+      "media-feature-range-notation": null
     },
     "ignoreFiles": [
       "**/vendor/**/*.css",
